[package]
name = "decryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
sodiumoxide = "0.2.7"
num_cpus = "1.13.1"
rayon = "1.5.1"
lazy_static = "1.4.0"
sha2 = "0.10.0"
indicatif = {version = "*", features = ["rayon"]}